--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "oxford-loss-landscapes"
-description = "Loss Landscapes for EXplainable AI - A library for visualizing and analyzing neural network loss landscapes"
+description = "Loss Landscapes for Explainable AI - A library for visualizing and analyzing neural network loss landscapes"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
     {name = "Oxford RSE Project Contributors", email = "your.email@example.com"}
