--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,39 @@
 # PyTorch - install from official index
 --index-url https://download.pytorch.org/whl/cpu
-torch>=1.8.0
+torch>=1.8.0; python_version<'3.13'
+torch>=2.5.0; python_version>='3.13'
 --index-url https://pypi.org/simple/
 
-# Core dependencies
+# Core dependencies (matching pyproject.toml)
+torchdiffeq>=0.2.0
 numpy>=1.19.0,<2.0; python_version<'3.13'
 numpy>=2.0; python_version>='3.13'
 pandas>=1.3.0
 scipy>=1.7.0
 tqdm>=4.60.0
 requests>=2.25.0
-torchdiffeq>=0.2.0
-twine>=6.2.0
+matplotlib>=3.3.0
+seaborn>=0.11.0
+
+# Development dependencies (optional - uncomment if needed)
+# pytest>=6.0
+# pytest-cov>=2.0
+# black>=21.0.0
+# isort>=5.0.0
+# flake8>=3.9.0
+# mypy>=0.910
+# pre-commit>=2.15.0
+# twine>=6.2.0
+# build
+
+# Advanced dependencies (optional - uncomment if needed)
+# plotly>=5.0.0
+# ipywidgets>=7.6.0
+# jupyter>=1.0.0
+# scikit-learn>=1.0.0
+# torchvision>=0.13.0
+
+# Transformers dependencies (optional - uncomment if needed)
+# transformers>=4.20.0
+# tokenizers>=0.13.0
+# datasets>=2.0.0
