--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ docs = [
     "sphinx>=4.0.0",
     "sphinx-rtd-theme>=1.0.0",
     "myst-parser>=0.17.0",
+    "furo>=2023.2.11",
 ]
 transformers = [
     "transformers>=4.20.0",
