--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -2,7 +2,7 @@ name: Deploy Sphinx documentation to Pages
 
 on:
   push:
-    branches: [main] # Trigger deployment on the main branch
+    branches: [peb_iss9] # Trigger deployment on the main branch
   pull_request:
   workflow_dispatch:
 
