roll back and change target branch

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,8 +1,8 @@
-name: Deploy Sphinx documentation to Pages
+name: documentation
 
 on:
   push:
-    branches: [peb_iss9] # Trigger deployment on the main branch
+    branches: [peb_iss9]
   pull_request:
   workflow_dispatch:
 
@@ -10,15 +10,22 @@ permissions:
   contents: write
 
 jobs:
-  pages:
+  docs:
     runs-on: ubuntu-latest
     steps:
-      - id: deployment
-        uses: sphinx-notes/pages@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      - name: Install dependencies
+        run: |
+          pip install sphinx sphinx_rtd_theme myst_parser
+      - name: Sphinx build
+        run: |
+          sphinx-build -b html docs/source docs/source/_build/html
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/peb_iss9' }}
         with:
-          docs-folder: docs/source  # Path to your Sphinx source folder
-          publish: false            # Prevents automatic deployment
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
+          publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ${{ steps.deployment.outputs.artifact }}
+          publish_dir: docs/source/_build/html
+          force_orphan: true
