--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ advanced = [
     "jupyter>=1.0.0",
     "scikit-learn>=1.0.0",
     "torchvision>=0.13.0",
+    "streamlit"
 ]
 examples = [
     "torchvision",
