--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "requests>=2.25.0",
     "matplotlib>=3.3.0",
     "seaborn>=0.11.0",
+    "dash>=3.2.0",
 ]
 dynamic = ["version"]
 
