--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ tqdm>=4.60.0
 requests>=2.25.0
 matplotlib>=3.3.0
 seaborn>=0.11.0
+dash>=3.2.0
 
 # Development dependencies (optional - uncomment if needed)
 # pytest>=6.0
